--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,31 @@
 /* Proektna stylesheet*/
 *{box-sizing: border-box;}
 body{
-    background-image: url("https://i.imgur.com/A5vq1yV.png");
+    background-image: url("https://i.imgur.com/znlxpmt.png"),url("https://i.imgur.com/A5vq1yV.png");
     background-attachment: fixed;
+    background-position-x:99%,0;
+    background-position-y: 99%,0;
+    background-repeat: no-repeat;
+    background-size: 7%,100%;
     margin:0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: rgb(77, 112, 128);
 }
+
 .survey{
-    background-image:url("https://i.imgur.com/HIpk1ay.png"), url("https://i.imgur.com/A5vq1yV.png");
-    background-position-x: left,0;
-    background-position-y: bottom,0;
-    background-size: 9%,100%;
-    background-repeat: no-repeat;
+    background-image:url("https://i.imgur.com/znlxpmt.png"),url("https://i.imgur.com/HIpk1ay.png"), url("https://i.imgur.com/A5vq1yV.png");
+    background-position-x:99%,1%,0;
+    background-position-y: 99%,99%,0;
+    background-size: 7%,9%,100%;
+    background-repeat: no-repeat,no-repeat,repeat;
     background-attachment: fixed;
     margin-bottom:0;
     margin-right: 0;
+}
+.link{
+    text-decoration: none;
+    font-style: normal;
+    font-weight: bold;
 }
 
 /*    NAVBAR     */
@@ -65,211 +75,271 @@ body{
     }
     .main{
         margin-top: 4%;
-        margin-bottom: 20px;
         margin-left: 25%;
         width: 50%;
         text-align: center;
-    }
-    .blog{
-    
-        border: none;
-        margin-top: 7%;
-        justify-content: space-around;
-        display:grid;
-        grid-template-columns: 25% 55%;
-
-        background:none;
-    }
-    #lower{
-        border: none;
-        margin-top: 7%;
-        justify-content: space-around;
-        display:grid;
-        grid-template-columns: 40% 40%;
-        row-gap: 50px;
-        background:none;
-    
-
-    }
-    .blog div{
-        
-        width: 100%;
-        height: 100%;
-        margin-bottom: 5px;
-    }
-  
-    .dateNtime{
-        margin-top:-5px;
+        border-radius: 10%;
+        border-style: dashed;
         font-style: italic;
         font-weight: bold;
+        font-size: large;
     }
-    .blogText{
-        border-style: solid !important;
-        border: cadetblue ;
-        background-color: rgb(66, 109, 110) !important;
-        width: 120%;
-         
-    }
-    .blog textarea{
-        resize: none;
-        width: 100%;
-        display: block;
-    }
-
-    
-    .content {
-        margin-top: 7%;
-        margin-left:25%;
-        margin-bottom: 20px;
-        width: 50%;
-        text-align: left;
-    }
-
-    .content img {
-        margin-left: 15px;
-        float: right;
-        margin-bottom: 5px;
-    }
-
-    .content p{
-        margin-left: 15px;
-        display: block;
-        margin: 2px 0 0 0;
-    }
-    .contentImg
-    {
-        margin-top: 7%;
-        margin-bottom:20px;
-        width: 80%;
-        margin:auto;
-        border:none;
-        white-space: nowrap;
-        display: grid;
-        grid-template-columns: 25% 25% 25%;
-        justify-content: space-around;
-        padding: 20px;
-    }
-    .contentImg div{
-        width: 100%;
-        height: 90%;
-        display: inline-block;
-    }
-    .contentMusic
-    {
-        margin-top: 7%;
-        margin-bottom:20px;
-        width: 90%;
-        margin:auto;
-        border:none;
-        white-space: nowrap;
-        display: grid;
-        grid-template-columns: 35% 35% ;
-        justify-content: space-around;
-        padding: 20px;
-        row-gap: 20px;
-        text-align: center;
-    }
-    .contentMusic div{
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        text-align: center;
-    }
-    .contentMusic p{
-        font-size: 2em;
-        font-family:'Times New Roman', Times, serif;
-        margin-top:0%;
-        border-radius: 25%;
-        border: 4px dashed rgb(28, 46, 54);
-        color:cornsilk;
-    
-    }
-    .musicContainer{
-        padding-top:10px;
-        font-size: 1.4em;
+    /* BLOG */
+        .blog{
         
+            border:none;
+            border-bottom: dashed;
+            border-color:cornsilk;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            justify-content: space-around;
+            display:grid;
+            grid-template-columns: 33% 33%;
+            background:none;
+            padding: 20px;
+        }
+        #lower{
+    
+            margin-top: 7%;
+            justify-content: space-around;
+            display:grid;
+            grid-template-columns: 33% 33%;
+            row-gap: 50px;
+            background:none;
+            margin-left: 0;
+            border:none;
+        }
+        .blog div{
+            
+            width: 100%;
+            height: 100%;
+            margin-bottom: 5px;
+        }
+    
+        .dateNtime{
+            margin-top:-5px;
+            font-style: italic;
+            font-weight: bold;
+        }
+        .blogText{
+            border-style: solid !important;
+            border: cadetblue ;
+            background-color: rgb(66, 109, 110) !important;
+            width: 120%;
+            
+        }
+        .blog textarea{
+            resize: none;
+            width: 100%;
+            display: block;
+        }
+    /* ~BLOG */
 
-    }
+    /* HOME */
+        .content {
+            margin:auto;
+            margin-top: 7%;
+            height: 70%;
+            width: 90%;
+            text-align: left;
+        }
+
+        .content img {
+            margin-left: 15px;
+            float: right;
+            margin-bottom: 5px;
+        }
+
+        .content p{
+            margin-left: 15px;
+            display: block;
+            margin: 2px 0 0 0;
+        }
+
+    /* ~HOME */
+
+    /* FAVORITES */
+        .contentImg
+        {
+            margin-top: 7%;
+            margin-bottom:20px;
+            width: 80%;
+            margin:auto;
+            border:none;
+            white-space: nowrap;
+            display: grid;
+            grid-template-columns: 30% 30% 30%;
+            column-gap: 50px;
+            justify-content: space-around;
+            padding: 20px;
+        }
+        .contentImg div{
+            width: 100%;
+            height: 90%;
+            display: inline-block;
+        }
+        .contentMusic
+        {
+            margin-top: 7%;
+            margin-bottom:20px;
+            width: 90%;
+            margin:auto;
+            border:none;
+            white-space: nowrap;
+            display: grid;
+            grid-template-columns: 35% 35% ;
+            justify-content: space-around;
+            padding: 20px;
+            row-gap: 20px;
+            text-align: center;
+        }
+        .contentMusic div{
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            text-align: center;
+        }
+        .contentMusic p{
+            font-size: 2em;
+            font-family:'Times New Roman', Times, serif;
+            margin-top:0%;
+            border-radius: 25%;
+            border: 4px dashed rgb(28, 46, 54);
+            color:cornsilk;
+        
+        }
+        .musicContainer{
+            padding-top:10px;
+            font-size: 1.4em;
+            
+
+        }
+    /* ~FAVORITES */
+
+    /* GALLERY */
     .contentGallery
-    {
-        width: 80%;
-        margin:80px auto 20px ;
-        white-space: nowrap;
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
-        grid-template-rows: 33% 33% 33%;
-        justify-content: space-around;
+        {
+            width: 70%;
+            margin:50px auto 20px ;
+            white-space: nowrap;
+            display: grid;
+            grid-template-columns: 33% 33% 33%;
+            grid-template-rows: 33% 33% 33%;
+            justify-content: space-around;
+            
+        }
+        .contentGallery div{
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            text-align: center;
+            border:solid
+        }
+        .commentGallery
+        {
+            width: 70%;
+            margin:-20px auto 0 ;
+            border-style: dashed;
+            border-radius: 5%;
+            border-width: 5px;
+            white-space: nowrap;
+            display: grid;
+            grid-template-columns: 33% 33% 33%;
+            grid-template-rows: 33% 33% 33%;
+            justify-content: space-around;
         
-    }
-    .contentGallery div{
-        width: 100%;
-        height: 100%;
-        display: inline-block;
-        text-align: center;
-        border:solid
-    }
-    .commentGallery
-    {
-        width: 80%;
-        margin:-20px auto 0 ;
-        border-style: dashed;
-        border-radius: 5%;
-        border-width: 5px;
-        white-space: nowrap;
-        display: grid;
-        grid-template-columns: 33% 33% 33%;
-        grid-template-rows: 33% 33% 33%;
-        justify-content: space-around;
-    
-    }
-    .commentGallery textarea{
-        width: 100%;
-        height: 80%;
-        resize: none;
-        margin-bottom: 5px;
+        }
+        .commentGallery textarea{
+            width: 100%;
+            height: 80%;
+            resize: none;
+            margin-bottom: 5px;
+            
+        }
+        .post{
+            border: none !important;
+            border-right: 5px solid rgb(28, 46, 54)  !important;
+            
+        }
+        .commentDiv{
+            border: none;
+            border-right: 5px solid rgb(28, 46, 54) ;
+            width: 100%;
+            height: 100%;
+        }
+        #last{
+            border:none !important;
+        }
+    /* ~FAVORITES */
+
+    /* SURVEY */
+
+
+        .surveyRadio{
+            border:none;
+            text-align: center;
+            margin: auto;
+        }
+        .satisfaction{
+            display: grid;
+            grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% ;
+            padding:7px;
+            width: 80%;
+            margin:auto;
         
-    }
-    .post{
-        border: none !important;
-        border-right: 5px solid rgb(28, 46, 54)  !important;
-        
-    }
-    .commentDiv{
-        border: none;
-        border-right: 5px solid rgb(28, 46, 54) ;
-        width: 100%;
-        height: 100%;
-    }
-    #last{
-        border:none !important;
-    }
-    .satisfaction{
-        display: grid;
-        grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% ;
-        padding:7px;
-        width: 80%;
-        margin:auto;
-    }
-    #rad{
-        border-bottom: none;
-        text-align: -webkit-center;
-        
-        
-    }
-    #num{
-        text-align: center;
-        border-top: none;
-        margin-bottom: 20px;
-        text-align: -webkit-left;
-        
-    }
+        }
+        #rad{
+            border-bottom: none;
+            text-align: -webkit-center;
+            
+            
+        }
+        #num{
+            text-align: center;
+            border-top: none;
+            margin-bottom: 20px;
+            text-align: -webkit-left;
+            
+        }
+    /* ~SURVEY  */
+
+
+    /* NASLOV NA DIV */
+        .title_box {
+            width: 66%;
+            margin:auto;
+            margin-top: 30px;
+            font-style: italic;
+            font-weight:600;
+            margin-bottom: 50px;
+        }
+        .title_box .filmContainer{
+            font-weight: 700;
+        }
+        .title_box #title {
+            position: relative;
+            top: -0.5em;
+            display: inline-block;
+            background-color: rgb(11, 33, 34);
+            border-style: groove;
+            border-radius: 15%;
+            font-size: 1.4em;
+            z-index: 0;
+            color:rgb(252, 248, 231);
+        }
+        .title_box .filmContainer{
+            padding-bottom: 15px;
+            text-align: center;
+        }
+    /* ~~NASLOV NA DIV */
+
 /*    ~~DIV     */
 
 
 /*    IMG     */
     img.CVpic{
-        width: 25%;
-        height:  25%;
+        width: 15%;
+        height:  15%;
     }
     img.filmPic{
         width: 100%;
@@ -290,8 +360,8 @@ body{
         width:100%;
         margin: auto;
         height: 100%;
-        
     }
+
     p img{
         margin-right: 5px;
         width: 16px;
@@ -301,37 +371,9 @@ body{
         width:20px;
         height:14px
     }
+
 /*    ~~IMG     */
 
-
-/* NASLOV NA DIV */
-    .title_box {
-        width: 70%;
-        margin:auto;
-        margin-top: 30px;
-        font-style: italic;
-        font-weight:600;
-        
-    }
-    .title_box .filmContainer{
-        font-weight: 700;
-    }
-    .title_box #title {
-        position: relative;
-        top: -0.5em;
-        display: inline-block;
-        background-color: rgb(11, 33, 34);
-        border-style: groove;
-        border-radius: 15%;
-        font-size: 1.4em;
-        z-index: 0;
-        color:rgb(252, 248, 231);
-    }
-    .title_box .filmContainer{
-        padding-bottom: 15px;
-        text-align: center;
-    }
-/* ~~NASLOV NA DIV */
 
 
 /* FIGURE */
@@ -357,70 +399,71 @@ body{
 
 /*  ANCHOR  */
     a{
-        color:white;
+        color:rgb(247, 214, 155);
         text-decoration: none;
     }
     a:hover{
-        color:wheat;
+        color:rgb(245, 189, 91);
         text-decoration: none;
+    }
+    .link a{
+        font-weight: normal;
     }
 /*  ~~ANCHOR  */
 
 /* INPUT */
-input{
-    cursor:pointer;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-.like{
-    width: 32px;
-    height: 32px;
-    float:right;
-    margin-top: -5px;
+    input{
+        cursor:pointer;
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+    .like{
+        width: 32px;
+        height: 32px;
+        float:right;
+        margin-top: -5px;
 
-}
-form{
-    padding:10px
-}
+    }
+    form{
+        padding:10px
+    }
 
-form textarea{
-    width: 70%;
-    height: 150%;
-    resize: none;
-    margin-bottom: 20px;
-    display: block;
-    margin: auto;
-}
+    form textarea{
+        width: 70%;
+        height: 150%;
+        resize: none;
+        margin-bottom: 20px;
+        display: block;
+        margin:auto;
+        
+    }
 
-fieldset{
-    width: 60%;
-    margin:100px auto 100px;
-    background-color:rgb(44, 71, 83);
-    border: 4px solid rgb(28, 46, 54);
-    color:rgb(252, 248, 231);   
-
-
-    
-}
-input[type=number] {
-    appearance: textfield;
-  }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
-legend{
-    background-color: rgb(11, 33, 34);
-    color:rgb(252, 248, 231);
-    border-style: dashed;
-    border-radius: 100%;
-    padding: 10px;
-}
-.legendFound{
-    display: inline-block;
-    text-align: left;
-    margin-left: -10px;
-    margin-right: 10px;
-}
+    fieldset{
+        width: 45%;
+        margin:100px auto 100px;
+        background-color:rgb(44, 71, 83);
+        border: 4px solid rgb(28, 46, 54);
+        color:rgb(252, 248, 231);   
+    }
+    input[type=number] {
+        appearance: textfield;
+    }
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+    legend{
+        background-color: rgb(11, 33, 34);
+        color:rgb(252, 248, 231);
+        border-style: dashed;
+        border-radius: 100%;
+        padding: 10px;
+    }
+    .legendFound{
+        display: inline-block;
+        text-align: left;
+        margin-left: -10px;
+        margin-right: 10px;
+    }
 /* ~~INPUT */
