--- a/styles.css
+++ b/styles.css
@@ -189,7 +189,7 @@ body{
             display: grid;
             grid-template-columns: 35% 35% ;
             justify-content: space-around;
-            padding: 20px;
+           
             row-gap: 20px;
             text-align: center;
         }
@@ -209,11 +209,16 @@ body{
         
         }
         .musicContainer{
-            padding-top:10px;
+            
+            background-color: rgb(77, 112, 128);
             font-size: 1.4em;
             
 
         }
+        .filmContainer{
+            background-color: rgb(77, 112, 128);
+        }
+
     /* ~FAVORITES */
 
     /* GALLERY */
@@ -239,6 +244,7 @@ body{
         {
             width: 70%;
             margin:-20px auto 0 ;
+            margin-bottom:70px;
             border-style: dashed;
             border-radius: 5%;
             border-width: 5px;
@@ -349,7 +355,7 @@ body{
     img.musicPic{
         width:75%;
         height:80%;
-        margin-bottom: 20px;
+        
         transition: all  0.6s ease-in-out;
     }
     .filmPic:hover ,.musicPic:hover{
